# worldcup-underdog-dnb-backtest

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
config/: baseline.yaml  multipletest_family.yaml  reprolog_schema.json
data/raw/: 1920_B1.csv.sha256  1920_D1.csv.sha256  1920_D2.csv.sha256  1920_E0.csv.sha256  1920_E1.csv.sha256  1920_E2.csv.sha256  1920_E3.csv.sha256  1920_F1.csv.sha256  1920_F2.csv.sha256  1920_G1.csv.sha256  1920_I1.csv.sha256  1920_I2.csv.sha256  1920_N1.csv.sha256  1920_P1.csv.sha256  1920_SC0.csv.sha256  1920_SC1.csv.sha256  1920_SC2.csv.sha256  1920_SC3.csv.sha256  1920_SP1.csv.sha256  1920_SP2.csv.sha256  1920_T1.csv.sha256  2021_B1.csv.sha256  2021_D1.csv.sha256  2021_D2.csv.sha256  2021_E0.csv.sha256  2021_E1.csv.sha256  2021_E2.csv.sha256  2021_E3.csv.sha256  2021_F1.csv.sha256  2021_F2.csv.sha256  2021_G1.csv.sha256  2021_I1.csv.sha256  2021_I2.csv.sha256  2021_N1.csv.sha256  2021_P1.csv.sha256  2021_SC0.csv.sha256  2021_SC1.csv.sha256  2021_SC2.csv.sha256  2021_SC3.csv.sha256  2021_SP1.csv.sha256  (+112 more)
data/raw/provenance/: data_php.html  data_php.html.sha256  intl_results_2026-06-16.csv.provenance.json  intl_shootouts_2026-06-16.csv.provenance.json  notes.txt.sha256  pinnacle_degradation_provenance.json  pinnacle_degradation_register.json  wc_jfjelstul_goals_2026-06-16.csv.provenance.json  wc_jfjelstul_matches_2026-06-16.csv.provenance.json  wc_jfjelstul_penalties_2026-06-16.csv.provenance.json
docs/audits/: audit_trail_2026-06-16_wc-holdout-slice.md
docs/decisions/: 0001-native-deps-and-cvxpy-solver.md  0002-reference-price-cutover.md  0003-90min-settlement.md  0004-transaction-cost-execution-model.md  0005-rng-substream-derivation.md
docs/protocol/: design.md  design.md.sha256  methodology.md  note_survivorship-capacity-reportcard_2026-06-16.md  note_wc-odds-gap_2026-06-16.md  plan_phased-workplan_2026-06-16.md  power_H001-wc-underdog-dnb.md  power_H001-wc-underdog-dnb.md.sha256  register_edge-prior-verification_2026-06-16.md  register_edge-prior-verification_2026-06-16.md.sha256
docs/research/: research_backtest-architecture-deliverables_2026-06-16.md  research_data-availability_2026-06-16.md  research_dnb-odds-calculations_2026-06-16.md  research_edge-flb-empirics_2026-06-16.md  research_gaps-register_2026-06-16.md  research_staking-bankroll_2026-06-16.md  research_statistical-methodology_2026-06-16.md
logs/: .gitkeep
src/: __init__.py  assemble.py  build_wc_panel.py  costs.py  frontier.py  identity_gate.py  ingest.py  ledger.py  metrics.py  pricing.py  provenance.py  reprolog.py  ruin.py  run.py  scrape_wc_odds.py  seeding.py  selection.py  settlement.py  staking.py  validate.py  vector_kelly.py  wc_holdout.py
tests/: __init__.py  test_assemble.py  test_costs.py  test_cross_platform.py  test_frontier.py  test_identity_gate.py  test_ingest.py  test_ledger.py  test_multipletest_family.py  test_phase2_reconciliation_totality.py  test_phase3_staking_engine.py  test_pricing.py  test_pricing_reconciliation.py  test_reprolog.py  test_ruin.py  test_run_dry_run.py  test_run_stake_stage.py  test_seeding.py  test_selection.py  test_settlement.py  test_staking.py  test_staking_schemes.py  test_validate.py  test_vector_kelly.py  test_wc_checksum_binding.py  test_wc_holdout.py
tests/fixtures/: mini_league.csv
